--- a/michiel.legters.org/CSS.html
+++ b/michiel.legters.org/CSS.html
@@ -33,7 +33,7 @@
                 left: 0;
                 top: 0;
                 right: 0;
-                background-color: #00c8c8;
+                background-color: #2d2b2c;
                 margin: -10px;
             }
 
@@ -85,7 +85,7 @@
 
             body
             {
-                background-color: #b3b3b3;
+                background-color: #2d2b2c;
                 overflow: hidden;
             }
 
