--- a/michiel.legters.org/Menu.html
+++ b/michiel.legters.org/Menu.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <ul>
-            <li><a href="https://legters.org/Download.php">Download</a></li>
-            <li><a href="https://legters.org/rooster1.php">Roosters</a></li>
-            <li><a href="https://legters.org">Home</a></li>
+            <li><a href="Download.php">Download</a></li>
+            <li><a href="rooster1.php">Roosters</a></li>
+            <li><a href="michiel.legters.org">Home</a></li>
         </ul>
     </body>
 </html>
